@@ -35,6 +35,8 @@ typedef enum {
   POP3_AUTH_LOGIN,
   POP3_AUTH_LOGIN_PASSWD,
   POP3_AUTH_CRAMMD5,
+  POP3_AUTH_DIGESTMD5,
+  POP3_AUTH_DIGESTMD5_RESP,
   POP3_AUTH_NTLM,
   POP3_AUTH_NTLM_TYPE2MSG,
   POP3_AUTH_FINAL,
